--- a/checkout.html
+++ b/checkout.html
@@ -215,7 +215,7 @@
     <div class="follow-us">
       <h3>Follow Us</h3>
       <div class="social-links">
-        <a href="https://www.facebook.com/share/1BnnhoCEzE/?mibextid=wwXIfr" target="_blank" class="facebook" title="Facebook">
+        <a href="https://www.facebook.com/share/1A4JiiCvub/?mibextid=wwXIfr" target="_blank" class="facebook" title="Facebook">
           <i class="fab fa-facebook-f"></i>
         </a>
         <a href="https://www.tiktok.com/@sreypheap.beauty?_t=ZS-8yCil3fmirH&_r=1" target="_blank" class="tiktok" title="TikTok">
