--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   <section class="hero-container">
     <div class="hero-slider" id="slider">
       <img src="images/IMG_2274.jpeg" alt="Banner 1">
-      <img src="IMG_2276.jpeg" alt="Banner 2">
+      <img src="images/IMG_2276.jpeg" alt="Banner 2">
       <img src="images/IMG_2291.jpeg" alt="Banner 3">
       <img src="images/IMG_2293.jpeg" alt="Banner 4">
       <img src="images/IMG_2301.jpeg" alt="Banner 5">
