Update image source for the first banner

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@ url('images/header-bg.jpg') center/cover no-repeat;
   <!-- Hero Slider Section -->
   <section class="hero-container">
     <div class="hero-slider" id="slider">
-      <img src="images/IMG_2274.jpeg" alt="Banner 1">
+      <img src="images/IMG_banner1.jpeg" alt="Banner 1">
       <img src="images/IMG_2276.jpeg" alt="Banner 2">
       <img src="images/IMG_2291.jpeg" alt="Banner 3">
       <img src="images/IMG_2293.jpeg" alt="Banner 4">
