--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@ url('images/header-bg.jpg') center/cover no-repeat;
     <div class="hero-slider" id="slider">
       <img src="images/IMG_banner1.jpeg" alt="Banner 1">
       <img src="images/IMG_banner2.jpeg" alt="Banner 2">
-      <img src="images/IMG_2291.jpeg" alt="Banner 3">
+      <img src="images/IMG_banner3.jpeg" alt="Banner 3">
       <img src="images/IMG_2293.jpeg" alt="Banner 4">
       <img src="images/IMG_2301.jpeg" alt="Banner 5">
     </div>
