--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   border-bottom: 0px solid var(--theme-color);
   
   /* ✅ រូបច្បាស់ពេញលេញ (គ្មានស្រមោល ឬថ្លា) */
-  background: url('images/IMG_header1.jpeg') center/cover no-repeat;
+  background: url('videos/videobanner1.mp4') center/cover no-repeat;
   background-blend-mode: normal;
 }
 
