--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@ Cica Houttuynia Tea Tree Calming mask
 <div class="product-card">
   <img src="images/IMG_1903.jpeg"alt="Manyo Factory - Thanks berry mask">
   <h3 class="product-name">Manyo Factory - Thanks berry mask </h3>
-  <p class="product-price">$15.99</p>
+  <p class="product-price">$11.50</p>
   <p class="product-caption" style="display: none;">Manyo Factory - Thanks berry mask 🍃
 ជាប្រភេទម៉ាសសន្លឹកសម្រាប់ប្រើប្រាស់ប្រចាំថ្ងៃ ដែលមានសារធាតុផ្សំចេញពី Berries 5 ប្រភេទ Green tea និង Centella ដែលមានអត្ថប្រយោជន៍ដូចជា:
 -ជួយផ្តល់សំណើមដល់ស្បែក
@@ -520,15 +520,18 @@ _ ជួយសម្រួលភាពតានតឹងនៃស្បែក</p
   <button class="buy-now">Buy Now</button>
 </div>
 <div class="product-card">
-  <img src="images/IMG_2239.jpeg"alt="PWB (Pink White Bumm) body lotion 120ml">
-  <h3 class="product-name">PWB (Pink White Bumm) body lotion 120ml</h3>
-  <p class="product-price">$9.99</p>
-  <p class="product-caption" style="display: none;">🍑 PWB (Pink White Bumm) body lotion 120ml
-_ជួយព្យាបាលបញ្ហាសង្វារ ក្រិន ខ្មៅ ស្នាម អាចលាបបានកន្លែងដែលក្រិនខ្មៅដូចជា គូទ ក្រលៀន កែងដៃ ជង្គង់🍑✨
--ជួយបំបិតក្រិន កន្ទួលរមាស់នៅលើស្បែក🍑✨
--ជួយឪ្យស្បែកគូទទន់ សរម្ម៉ត់ភ្លឺពីខាងក្នុង ជឿជាក់ក្នុងការពាក្យBikini
--ជួយបំបានត់ស្នាមសត្វខាំជាដើម នឹង ជួយរាល់បញ្ហាសង្វារសដែរមាននៅគ្រប់កន្លែង អាចប្រើបានគ្រប់កន្លែងណាដែរមានក្រិនខ្មៅ
--សម្រាប់អ្នកមានស្នាមមុនខ្នងក៏អាចប្រើបានជាបំបាត់ស្នាមសល់ពីការកើតមុនទៀតផង 🍑✨</p>
+  <img src="images/IMG_2400.jpeg"alt="Medicube Glutathione Glow Serum & Cream">
+  <h3 class="product-name">Medicube Glutathione Glow Serum & Cream</h3>
+  <p class="product-price">$12.99</p>
+  <p class="product-caption" style="display: none;">Medicube Glutathione Glow Serum & Cream
+
+➖សេរ៉ូមដែលមាន glutathione ខ្ពស់ផ្តល់នូវស្បែកសរភ្លឺហ្មត់រលោង និង ប្រសិទ្ធិភាពបន្តឹងស្បែកអោយក្មេងជាងវ័យទ្វេដង
+➖កាត់បន្ថយស្នាម ជាំ អុជខ្មៅ ស្បែកគ្រេីម ខ្មៅស្រអាប់អោយប្រសេីរបានលឿន
+➖បង្រួមរន្ធរោមអោយតូចជាងមុន
+➖ព្យាបាលស្នាមជ្រីវជ្រួញ ត្រង់ក្រអូមមាត់ កន្ទុយភ្នែកជួយអោយស្បែកGlow​ Glass skin
+➖រក្សាសំណេីមដល់ស្បែករហូតដល់24ម៉ោង
+
+ផលិតផលប្រទេសកូរ៉េ🇰🇷</p>
   <button class="buy-now">Buy Now</button>
 </div>
 <div class="product-card">
