--- a/index.html
+++ b/index.html
@@ -206,6 +206,145 @@
     
 <!-- Product 1 -->
 <div class="product-card">
+  <img src="images/IMG_new1.jpeg" alt="medicube - Red Succinic Acid Peeling Pad">
+  <h3 class="product-name">medicube - Red Succinic Acid Peeling Pad</h3>
+  <p class="product-price">$13.99</p>
+  <p class="product-caption" style="display: none;">medicube - Red Succinic Acid Peeling Pad
+
+Benefits:
+
+- A acne-clearing peeling toner pad formulated with Niacinamide and Succinic Acid to relieve acne, pimples, breakouts, and post-acne pigmentations.
+
+- Dual erasing system that erases the acne spots and sebum and highly active water formula for the acne skin with only one pad.
+
+- Combination of key ingredients and patented ingredients for acne-prone skin, including Succinic Acid, Salicylic Acid, Phyto-
+Keratinase, Meta Cool and Allantoin.
+
+- Acne-prone skin use tested and hypoallergenic tested.
+
+How to use:
+After cleansing, take one cotton pad and gently wipe it over the entire face.</p>
+  <button class="buy-now">Buy Now</button>
+</div>
+<div class="product-card">
+  <img src="images/IMG_new2.jpeg" alt="Medicube Zero Pore One Day Serum">
+  <h3 class="product-name">Medicube Zero Pore One Day Serum</h3>
+  <p class="product-price">$12.80</p>
+  <p class="product-caption" style="display: none;">Medicube Zero Pore One Day Serum ជាសេរ៉ូមដែលត្រូវបានរចនាឡើងពី 15.2% AHA, BHA, និង PHA សម្រាប់ស្បែកមានមុនធំៗ មុនកប់ ព្យាបាលមុនក្នុងរយះពេលខ្លី ជួយបង្រួមរន្ធញើស គ្រប់គ្រងជាតិខ្លាញ់ មានផ្ទុកសារធាតុ allantoin ដើម្បីជួយសម្រួលដល់ស្បែក🫧💙</p>
+  <button class="buy-now">Buy Now</button>
+</div>
+<div class="product-card">
+  <img src="images/IMG_new3.jpeg" alt="Medicube TXA Niacinamide Capsule Cream 55g">
+  <h3 class="product-name">Medicube TXA Niacinamide Capsule Cream 55g</h3>
+  <p class="product-price">$16.99</p>
+  <p class="product-caption" style="display: none;">🪄ក្រែមលាបស្បែក Medicube TXA Niacinamide Capsule Cream 55g
+-គ្រឿងផ្សំសំខាន់ៗ៖ អាស៊ីត Tranexamic សុទ្ធ 99% និង Niacinamide 5%, Alpha-arbutin និង Gluta
+- ធ្វើឱ្យស្បែកភ្លឺថ្លា កាត់បន្ថយអាចម៍រុយ មេឡាស្ម៉ា និងចំណុចខ្មៅ
+- ទប់ស្កាត់ការផលិតមេឡានីន ដែលបណ្តាលឱ្យរលាក និងកែតម្រូវពណ៌ស្បែកស្រអាប់
+- រឹតបន្តឹងរន្ធញើស ធ្វើឱ្យស្បែករលោង
+- ផ្តល់សំណើម និងធ្វើឱ្យស្បែកស្រស់ថ្លា
+- ពង្រឹងរបាំងការពារស្បែក</p>
+  <button class="buy-now">Buy Now</button>
+</div>
+<div class="product-card">
+  <img src="images/IMG_new5.jpeg" alt="Medicube toner pad">
+  <h3 class="product-name">Medicube toner pad</h3>
+  <p class="product-price">$16.80</p>
+  <p class="product-caption" style="display: none;">•Medicube toner pad ជួយស្បែកសភ្លឺ ផ្តល់សំណើ​ម​ និងប្រឆាំងភាពចាស់ជ្រីវជ្រួញបានទាំងខាងក្នុង និងខាងក្រៅ 1ប្រអប់70សន្លឹក ✨
+
+•បន្ទះសំលីមាន​ 2 ខាងរ​លោង និងគ្រើម (gauze) ​& មានផ្ទុកម្ស៉ៅ Vitamin C ✨
+
+•សម្រាប់ស្បែកស្ងួត និងចម្រុះ</p>
+  <button class="buy-now">Buy Now</button>
+</div>
+<div class="product-card">
+  <img src="images/IMG_new6.jpeg" alt="Medicube Toner Pad Zero Pore Pads">
+  <h3 class="product-name">Medicube Toner Pad Zero Pore Pads</h3>
+  <p class="product-price">$15.50</p>
+  <p class="product-caption" style="display: none;">🫧Medicube Toner Pad Zero Pore Pads🫧
+•ជាប្រភេទសំឡី​ ជម្រុះកោសិកាចាស់
+•ជា​ Toner Pad ដែលបញ្ចូលជាមួយ​ Salicylic (BHA) + AHA
+•ជម្រុះមុនកប់តូចៗ​ មុនសាច់​ មុនក្បាលខ្មៅ
+•កាត់បន្ថយបញ្ហាកកស្ទះរន្ធញេីស
+•កាត់បន្ថយស្នាមអុចខ្មៅ</p>
+  <button class="buy-now">Buy Now</button>
+</div>
+<div class="product-card">
+  <img src="images/IMG_new7.jpeg" alt="Medicube TXA Niacinamide 15 Serum">
+  <h3 class="product-name">Medicube TXA Niacinamide 15 Serum</h3>
+  <p class="product-price">$12.50</p>
+  <p class="product-caption" style="display: none;">Medicube TXA Niacinamide 15 Serum
+- Serum នេះជាជំនួយការក្នុងការបំបាត់ស្នាមអុចខ្មៅ (Dark Spots) ស្នាមមុន (Post-acne Marks) និងជួយឲ្យស្បែកភ្លឺថ្លា ដោយសារការផ្សំបញ្ចូលគ្នានូវ 5% Tranexamic Acid (TXA) និង 10% Niacinamide។
+- វាជួយពង្រឹងរបាំងការពារស្បែក (Skin Barrier) ផ្តល់ជាតិទឹក (Hydration) និងធ្វើឲ្យផ្ទៃមុខរលោង កាត់បន្ថយរន្ធញើស (Pore) ជាមួយនឹងវាយនភាពស</p>
+  <button class="buy-now">Buy Now</button>
+</div>
+<div class="product-card">
+  <img src="images/IMG_new4.jpeg" alt="Medicube Zero Pore One-Day Cream">
+  <h3 class="product-name">Medicube Zero Pore One-Day Cream</h3>
+  <p class="product-price">$14.99</p>
+  <p class="product-caption" style="display: none;">Medicube Zero Pore One-Day Cream💙
+គ្រីមដែលកំពុងល្បីខ្លាំងផ្តេាតទៅលើបញ្ហាមុខមុន Texture skin មុខមានរន្ធញើសធំ
+•ជួយបំបាត់បញ្ហាមុខដែលមានមុនក្បាលខ្មៅ មុនកប់ មុនកន្ទឹស
+•ជួយបង្រួមរន្ធញើសដែលរីកធំ
+•ធ្វើអេាយស្បែកមានសំណើម ភ្លឺថ្លា ម៉ត់រលេាង
+•សាច់គ្រីមស្រាលមិនធ្វើអេាយស្ទះរន្ធញើស
+•គ្រប់គ្រងការផលិតជាតិប្រេងដែលលើស ព្រមទាំងជួយពង្រឹងរបាំងស្បែកមុខអេាយរឹងមាំ
+•ចំណុះ 50ml
+•ធានាជា ផលិតផលរបស់ប្រទេសកូរ៉េ100%</p>
+  <button class="buy-now">Buy Now</button>
+</div>
+<div class="product-card">
+  <img src="images/IMG_new8.jpeg" alt="Medicube PDRN Pink Collagen Capsule Cream">
+  <h3 class="product-name">Medicube PDRN Pink Collagen Capsule Cream</h3>
+  <p class="product-price">$14.50</p>
+  <p class="product-caption" style="display: none;">Medicube PDRN Pink Collagen Capsule Cream
+🌸 ជាប្រភេទគ្រីមដែលផ្ទុកសារធាតុចិញ្ចឹមជាច្រើន ដើម្បីជំរុញអោយស្បែកមុខភ្លឺរលោង បំបាត់ស្នាមអុជខ្មៅ
+🌸 មានកូឡាជេន ជួយជំរុញស្បែកមុខអោយតឹងរលោង ក្មេងជាងវិញ
+🌸 ជួយស្បែកមុខអោយមានសំណើមគ្រប់គ្រាន់
+🌸 អាចប្រើបានគ្រប់ប្រភេទស្បែកមុខ</p>
+  <button class="buy-now">Buy Now</button>
+</div>
+<div class="product-card">
+  <img src="images/IMG_new9.jpeg" alt="MARRY & MAY Premium Idebenone">
+  <h3 class="product-name">Rose PDRN Pink Peptide Serum (Medicube)</h3>
+  <p class="product-price">$12.50</p>
+  <p class="product-caption" style="display: none;">អត្ថប្រយោជន៍របស់ Rose PDRN Pink Peptide Serum (Medicube) 🌸
+
+• ជួយបំពេញសំណើមឱ្យស្បែក មើលទៅទន់រលោង និងភ្លឺថ្លា
+• ជួយស្តារស្បែកដែលស្ងួត ឬអស់កម្លាំង ឱ្យមានភាពរស់រវើក
+• PDRN ជួយជំរុញការស្តារកោសិកាស្បែក និងពង្រឹងស្បែក
+• Peptide ជួយបង្កើនភាពតឹងណែន បន្ថយស្នាមជ្រីវជ្រួញ
+• ជួយឱ្យស្បែកមើលទៅពេញ ស្អាត មាន dewy glow
+• សាកសមសម្រាប់ស្បែកមើលទៅស្រអាប់ ឬខ្វះសំណើម</p>
+  <button class="buy-now">Buy Now</button>
+</div>
+<div class="product-card">
+  <img src="images/IMG_new10.jpeg" alt="Medicube PDRN Pink Collagen Toning Gel Toner Pad + Ampoule Serum">
+  <h3 class="product-name">Medicube PDRN Pink Collagen Toning Gel Toner Pad + Ampoule Serum</h3>
+  <p class="product-price">$14.99</p>
+  <p class="product-caption" style="display: none;">🌸 Medicube PDRN Pink Collagen Toning Gel Toner Pad + Ampoule Serum 🌸
+•PDRN (Salmon DNA) ទៅដល់ 99% – ជាសារធាតុជួយជួសជុល និងស្ដារស្បែកឲ្យកាន់តែល្អប្រសើរ។
+•ជួយជំរុញការផលិត Collagen – ជួយស្បែកមុខឲ្យដោះសោរបញ្ហាស្នាមជ្រីវជ្រួញ និងបង្រួមរន្ធរោម។
+•ផ្ដល់សំណើមខ្ពស់ – ស្បែកនឹងមានសំណើមគ្រប់គ្រាន់ មិនជ្រុះជ្រួញ ឬស្ងួតទេ។
+•ជួយបន្តឹងស្បែក – ធ្វើឲ្យស្បែករឹងមាំ និងមើលទៅវ័យក្មេង។
+•ធ្វើឲ្យស្បែកសភ្លឺថ្លា – ពន្លឺស្បែកប្រសើរឡើង ដោយបណ្តុះបណ្តាលស្បែកថ្មី។</p>
+  <button class="buy-now">Buy Now</button>
+</div>
+
+<div class="product-card">
+  <img src="images/IMG_new11.jpeg" alt="Medicube PDRN pink Cica soothing toner">
+  <h3 class="product-name">Medicube PDRN pink Cica soothing toner</h3>
+  <p class="product-price">$13.50</p>
+  <p class="product-caption" style="display: none;">🌸Medicube PDRN pink Cica soothing toner ទឹកតប់មុខប្រើបានគ្រប់ប្រភេទស្បែក ជាពិសេស ស្បែកស្រអាប់ ស្ងួត ស្បែកមានស្នាម🌸
+•មានសារធាតុផ្សំសំខាន់ peptide PDRN Cica ដែលជួយបានលើបញ្ហាច្រើនក្នុងពេលតែមួយ
+•ផ្តល់សំណើម និងធ្វើអោយស្បែកភ្លឺរលោងភ្លាមៗ
+•បណ្តឹងស្បែក បន្ថយស្នាមជួ្រញ បន្ថយរោលក្រហម
+•ជួយបានលើបញ្ហាស្បែកស្រអាប់ខ្លាំង ជាំ ស្នាមខ្មៅដិត
+•កាន់តែប្រើកាន់តែធ្វើអោយស្បែកមុខសរលោងក្នេងជាងវ័យ
+•ប្រើបានព្រឹក /យប់ បន្ទាប់ពីលាងមុខរួច</p>
+  <button class="buy-now">Buy Now</button>
+</div>
+<div class="product-card">
   <img src="images/IMG_1900.jpeg" alt="MARRY & MAY Premium Idebenone">
   <h3 class="product-name">MARRY & MAY Premium Idebenone</h3>
   <p class="product-price">$11.99</p>
