--- a/index.html
+++ b/index.html
@@ -213,6 +213,234 @@
     
     <!-- Product 1 -->
 <div class="product-card">
+  <img src="images/IMG_new13.jpeg" loading="lazy" alt="️Skin1004 centella tone brightening capsule ampoule">
+  <h3 class="product-name">️Skin1004 centella tone brightening capsule ampoule</h3>
+  <p class="product-price">$12.00</p>
+  <p class="product-caption" style="display: none;">🤍🌫️Skin1004 centella tone brightening capsule ampoule
+•សេរ៉ូមងាយស្រូបចូលបានលឿនជាង 𝙰𝚖𝚙𝚘𝚞𝚕𝚎 ផ្សេងៗ
+•ល្អសំរាប់អ្នកដែរមានស្បែកមុខស្ងួតខ្មៅស្រអាប់ ស្បែកមុខពណ៍មិនស្មើរគ្នា
+•𝟽𝟽% នៃ 𝙲𝚎𝚗𝚝𝚎𝚕𝚕𝚊 𝙰𝚜𝚒𝚊𝚝𝚒𝚌𝚊 𝙴𝚡𝚝𝚛𝚊𝚌𝚝 បំពេញជាតិទឹកដល់ស្បែកនិងរក្សារសំនើមដល់ស្បែក
+•𝙼𝚊𝚍𝚎𝚌𝚊𝚜𝚜𝚘𝚜𝚒𝚍𝚎 បង្កើនស្ថេរភាពសារធាតុផ្សំ ជួយអោយស្បែកភ្លឺថ្លា
+•𝟸% នៃ 𝚃𝚛𝚊𝚗𝚎𝚡𝚊𝚖𝚒𝚌 𝙰𝚌𝚒𝚍 បំបាត់ស្នាមអុជខ្មៅនៅលើស្បែក /ស្នាមមុន/ស្នាមអាច</p>
+  <button class="buy-now">Buy Now</button>
+</div>
+<div class="product-card">
+  <img src="images/IMG_new14.jpeg" loading="lazy" alt="Skin1004 Tone brightening capsule cream">
+  <h3 class="product-name">Skin1004 Tone brightening capsule cream</h3>
+  <p class="product-price">$13.50</p>
+  <p class="product-caption" style="display: none;">🤍Skin1004 Tone brightening capsule cream ត្រូវជាមួយស្បែកស្ងួត ស្រអាប់ មានស្នាមច្រើន ស្បែកងាយប្រតិកម្មក៏ប្រើបាន🤍
++ សម្រាប់អ្នកមានមុខស្ងួតខ្មៅស្រអាប់
++ ជួយផ្តល់សំណើម និងទប់សំណើមបានល្អ
++ សាច់លេស្តើងស្រាល លាបហើយម៉ត់រលោងលើមុខ មិនស្អិត មិនធ្ងន់មុខ
++ ជួយអោយមុខសភ្លឺ បំបាត់ស្នាម
++ ជួយកាត់បន្ថយស្នាមអុជខ្មៅ ពណ៌ស្បែកមិនស្មើរគ្នា
+»» ប្រើបានព្រឹក/យប់បន្ទាប់ពីសេរ៉ូមរឺtoner</p>
+  <button class="buy-now">Buy Now</button>
+</div>
+<div class="product-card">
+  <img src="images/IMG_new15.jpeg" loading="lazy" alt="Skin 1004 Pure Centella Cream">
+  <h3 class="product-name">Skin 1004 Pure Centella Cream</h3>
+  <p class="product-price">$14.00</p>
+  <p class="product-caption" style="display: none;">✨Skin 1004 Pure Centella Cream ✨
+•ព្យាបាលមុខរោលមុនតូចៗលើស្បែកមុខបានយ៉ាងពូកែ
+•ជួយកំចាត់បាក់តេរីដែលបង្កឲ្យកើតមុន កើតរោលរមាស់
+•មានសារធាតុប្រឆាំងនឹងការរលាកបានយ៉ាងឆាប់រហ័ស
+•ជួយជួសជុលកោសិកាខូចៗ និងជួសជុលរនាំងការពារស្បែកមុខឲ្យមានសុខភាពល្អឡើងវិញ
+•ជួយសម្អាតរន្ធញើសបានយ៉ាងល្អ មិនឲ្យកើតមុនកប់សាច់
+•ផ្ដល់សំណើមដល់ស្បែកមុខបានយ៉ាងល្អ
+•ប្រេីជាពិសេសសំរាប់ស្បែកមុខងាយប្រតិកម្ម
+•ជួយឲ្យស្បែកមុខសម៉ត់ ភ្លឺរលោង និងមានសំណើមខ្ពស់</p>
+  <button class="buy-now">Buy Now</button>
+</div>
+<div class="product-card">
+  <img src="images/IMG_new16.jpeg" loading="lazy" alt="Skin 1004 Pure Centella Ampoules">
+  <h3 class="product-name">Skin 1004 Pure Centella Ampoules</h3>
+  <p class="product-price">$12.80</p>
+  <p class="product-caption" style="display: none;">Skin 1004 Pure Centella Ampoules✨
+-Centella Asiatica ប្រឆាំងនឹងការរោល ក្រហម និងរលាក
+-ជួយជួសជុលរនាំងការពារស្បែកមុខឲ្យស្បែកទន់មានសុខភាពល្អ
+-ផ្ដល់សំណើមដល់ស្បែកកាត់បន្ថយមុខក្រហម និងស្នាមក្រហម
+-កាត់បន្ថយរោលក្រហម មុខក្រហមលើស្បែក</p>
+  <button class="buy-now">Buy Now</button>
+</div>
+<div class="product-card">
+  <img src="images/IMG_new17.jpeg" loading="lazy" alt="Skin 1004 Madagascar Centella Poremizing Fresh Ampoule">
+  <h3 class="product-name">Skin 1004 Madagascar Centella Poremizing Fresh Ampoule</h3>
+  <p class="product-price">$11.50</p>
+  <p class="product-caption" style="display: none;">Skin 1004 Madagascar Centella Poremizing Fresh Ampoule🩷✨
+
+🌸ជាប្រភេទ ampoule ដែលជួយបង្រួមរន្ធញើស ជួយកាតបន្ថយការឡើងប្រេង ជួយអោយស្បែកភ្លឺថ្លា សាកសមសម្រាប់ស្បែកមុខខ្លាញ់ ស្បែកមុខចម្រុះ ជាពិសេសសម្រាប់អ្នកដែលមានរន្ធញើសធំៗ🌸</p>
+  <button class="buy-now">Buy Now</button>
+</div>
+<div class="product-card">
+  <img src="images/IMG_new18.jpeg" loading="lazy" alt="Skin 1004 Madagascar Centella Poremizing Light Gel Cream">
+  <h3 class="product-name">Skin 1004 Madagascar Centella Poremizing Light Gel Cream</h3>
+  <p class="product-price">$12.50</p>
+  <p class="product-caption" style="display: none;">Skin 1004 Madagascar Centella Poremizing Light Gel Cream🌸🩷
+
+ជាប្រភេទគ្រីមលាបមុខ សាច់ជែលដែលមានតួនាទី៖
+•សាកសមសម្រាប់មុខរន្ធញើសធំ
+•ជួយបង្រួមរន្ធញើស
+•ជួយចិញ្ចឹម និងបំប៉នស្បែក​មុខ
+•កាត់បន្ថយ​ការឡើងជាតិប្រេង
+•កាត់បន្ថយមុនកប់ មុនក្បាលខ្មៅ
+•ជួយឲ្យស្បែកភ្លឺថ្លា​
+•លាបចូលស្បែកមុខបានល្អ និងផ្ដល់សំណើម
+🇰🇷 ផលិតផលសុទ្ធរបស់កូរ៉េ100%</p>
+  <button class="buy-now">Buy Now</button>
+</div>
+<div class="product-card">
+  <img src="images/IMG_new19.jpeg" loading="lazy" alt="Skin 1004 Madagascar TEA - TRICA B5 Cream">
+  <h3 class="product-name">Skin 1004 Madagascar TEA - TRICA B5 Cream</h3>
+  <p class="product-price">$13.00</p>
+  <p class="product-caption" style="display: none;">Skin 1004 Madagascar TEA - TRICA B5 Cream
+
+ជាប្រភេទគ្រីមលាបមុខដែលមានតួនាទី៖💚🍀
+•ជួយឲ្យត្រជាក់ស្បែកមុខ កាត់បន្ថយរោល រលាក
+•ជួយព្យាបាលមុនកប់ មុនក្បាលខ្មៅ
+•ជួយទប់ស្កាត់ជាតិប្រេងដែលលើស
+•ចំណុះ 75ml
+•ជាផលិតផលកូរ៉េសុទ្ធ 100% 🇰🇷</p>
+  <button class="buy-now">Buy Now</button>
+</div>
+
+<div class="product-card">
+  <img src="images/IMG_new20.jpeg" loading="lazy" alt="ឈ្មោះ ផលិតផល">
+  <h3 class="product-name">Skin 1004 Serum Centella Tea-Trica Relief 100ml</h3>
+  <p class="product-price">$12.50</p>
+  <p class="product-caption" style="display: none;">💚𝐒𝐊𝐈𝐍 𝟏𝟎𝟎𝟒 𝐒𝐄𝐑𝐔𝐌 𝐂𝐄𝐍𝐓𝐄𝐋𝐋𝐀 𝐓𝐄𝐀-𝐓𝐑𝐈𝐂𝐀 𝐑𝐄𝐋𝐈𝐄𝐅🍀 100ml
+• សាកសមសម្រាប់ប្រភេទស្បែកដែលងាយនឹងកើតមុន រលាក ងាយប្រតិកម្ម ស្បែកខ្លាញ់ រន្ធញើសធំ
+• ផ្តល់សំណើមដល់ស្បែក ដើម្បីកាត់បន្ថយភាពរោល​ រលាកនៃស្បែក
+• ជួយកាត់បន្ថយជាតិខ្លាញ់ដែលលើស និងរន្ធញើសធំៗ ហើយធ្វើអោយស្បែកមានភាពប្រសើរឡើង</p>
+  <button class="buy-now">Buy Now</button>
+</div>
+
+<div class="product-card">
+  <img src="images/IMG_new21.jpeg" loading="lazy" alt="Skin1004 Hyalu-Cica First Ampoule">
+  <h3 class="product-name">Skin1004 Hyalu-Cica First Ampoule</h3>
+  <p class="product-price">$12.00</p>
+  <p class="product-caption" style="display: none;">❄️Skin1004 Hyalu-Cica First Ampoule❄️
+•ជាសេរ៉ូមលាបមុខដែលផ្តោតទៅលើស្បែកមុខស្ងួតហើយងាយប្រតិកម្ម🫧
+•សេរ៉ូមជាប្រភេទទឹកងាយរលាយចូលស្បែក ប្រកបទៅដោយសារធាតុផ្សំចេញពី Phyto Collagen, Centella Asiatica🫧
+•ជួយបណ្តឹងស្បែកឲ្យក្មេងជាងវ័យ ទប់ស្កាត់ភាពចាស់
+•ជួយឲ្យស្បែកទន់ភ្លឺថ្លា មានសំណើម មានសុខភាពល្អ
+•ចំណុះ 100ml🫧
++++របៀបប្រើ 1ថ្ងៃ២ដងព្រឹកនឹងយប់🫧</p>
+  <button class="buy-now">Buy Now</button>
+</div>
+
+<div class="product-card">
+  <img src="images/IMG_new22.jpeg" loading="lazy" alt="Skin 1004 Centella Hyalu-Cica Moisture Cream">
+  <h3 class="product-name">Skin 1004 Centella Hyalu-Cica Moisture Cream</h3>
+  <p class="product-price">$13.00</p>
+  <p class="product-caption" style="display: none;">🧊🫧Skin 1004 Centella Hyalu-Cica Moisture Cream
+ជាប្រភេទគ្រីមលាបមុខ ជួយផ្ដល់ជាតិទឹកដល់ស្បែក ផ្ដល់សំណើម ជួយឲ្យស្បែកភ្លឺថ្លា អាចប្រើបានគ្រប់ប្រភេទស្បែក និង ជួយរក្សាសំណើមដល់ស្បែក🫧🌫️
+🇰🇷 ផលិតផលសុទ្ធរបស់កូរ៉េ100%</p>
+  <button class="buy-now">Buy Now</button>
+</div>
+<div class="product-card">
+  <img src="images/IMG_new23.jpeg" loading="lazy" alt="SKIN1004 Madagascar Centella Probio-Cica Intensive Ampoule 50ml">
+  <h3 class="product-name">SKIN1004 Madagascar Centella Probio-Cica Intensive Ampoule 50ml</h3>
+  <p class="product-price">$13.50</p>
+  <p class="product-caption" style="display: none;">SKIN1004 Madagascar Centella Probio-Cica Intensive Ampoule 50ml 🤎
+_ ជួយបំប៉នស្បែក ជួសជុលកោសិកាស្បែក និងធ្វើអោយស្បែកភ្លឺថ្លា
+_ ជួយផ្តល់សំណើម និងគ្រប់គ្រងតុល្យភាពជាតិប្រេងដល់ស្បែក
+_ បំបាត់មុន ក្រហម
+_ ជួយបង្រួមរន្ធរោម បន្តឹងស្បែកមុខ ពន្យាភាពជ្រីវជ្រួញ
+_ បំបាត់ស្នាមអុចខ្មៅ និងស្បែកមានសសៃក្រហម
+_ សម្រាប់ស្បែកមុខដែលងាយខូចរនាំងការពារស្បែក និងការពារស្បែកពីការកើតមុន និងកន្ទួល
+_ ពង្រឹងរបាំងការពារស្បែក ធ្វើអោយស្បែកមានសំណើម រលោងពេញមួយថ្ងៃ
+_ ល្អបំផុតសម្រាប់ស្បែកដែលទើបតែផ្តាច់ឡេលាយ</p>
+  <button class="buy-now">Buy Now</button>
+</div>
+<div class="product-card">
+  <img src="images/IMG_new24.jpeg" loading="lazy" alt="Skin1004 probio-cica enrich cream">
+  <h3 class="product-name">Skin1004 probio-cica enrich cream</h3>
+  <p class="product-price">$12.50</p>
+  <p class="product-caption" style="display: none;">🤎Skin1004 probio-cica enrich cream 🤎
+ជាប្រភេទគ្រីមដែរផ្តោតទៅលើការជួសជុលនិងពង្រឹងរបាំងការពារស្បែក
+-Centella Asiatica ជួយអោយត្រជាក់ស្បែក បំបាត់មុនរោល រលាកក្រហម
+-Ceramide NP & Cica ជួយជួសជុលនិងពង្រឹងរបាំងការពារដល់ស្បែក
+-គ្រប់គ្រងតុល្យភាពសំនើម ប្រេងដល់ស្បែក
+-ប្រឆាំងភាពចាស់ ស្នាមជ្រីវជ្រួញ
+-មានផ្ទុក Seed oil ដែរធ្វើអោយស្បែកងាយស្រូបយកសារធាតុចិញ្ចឹមរបស់គ្រីម និងបំបាត់បញ្ហាស្បែកស្ងួតខ្វះជាតិទឹក
+- ជាមួយនិងគ្រីមកំហាប់ខ្ពស់ផ្តល់អោយស្បែកនូវពណ៍ភ្លឺថ្លារលោងម៉ត់</p>
+  <button class="buy-now">Buy Now</button>
+</div>
+<div class="product-card">
+  <img src="images/IMG_new25.jpeg" loading="lazy" alt="Skin1004 Centella Ampoule Foam">
+  <h3 class="product-name">Skin1004 Centella Ampoule Foam</h3>
+  <p class="product-price">$9.99</p>
+  <p class="product-caption" style="display: none;">🤎 Skin1004 Centella Ampoule Foam
++ សម្រាប់ស្បែកមុខ ស្ងួត ធម្មតា និង ងាយប្រតិកម្ម
++ ជួយលាងជម្រះធូកដីបានយ៉ាងស្អាតល្អ
++ មិនធ្វើឲមុខស្ងួត បន្ទាប់ពីប្រើប្រាស់ហើយ
++ ជួយកាត់បន្ថយស្នាម
++ ជួយផ្ដល់សំណើមដល់ស្បែក
++ ជួយកាត់បន្ថយមុន
++ ជួយកាត់បន្ថយការរលាកស្បែក</p>
+  <button class="buy-now">Buy Now</button>
+</div>
+<div class="product-card">
+  <img src="images/IMG_new26.jpeg" loading="lazy" alt="𝗦𝗸𝗶𝗻𝟭𝟬𝟬𝟰 𝗠𝗮𝗱𝗮𝗴𝗮𝘀𝗰𝗮𝗿 𝗖𝗲𝗻𝘁𝗲𝗹𝗹𝗮
+𝗧𝗼𝗻𝗲 𝗕𝗿𝗶𝗴𝗵𝘁𝗲𝗻𝗶𝗻𝗴 𝗖𝗹𝗲">
+  <h3 class="product-name">𝗦𝗸𝗶𝗻𝟭𝟬𝟬𝟰 𝗠𝗮𝗱𝗮𝗴𝗮𝘀𝗰𝗮𝗿 𝗖𝗲𝗻𝘁𝗲𝗹𝗹𝗮
+𝗧𝗼𝗻𝗲 𝗕𝗿𝗶𝗴𝗵𝘁𝗲𝗻𝗶𝗻𝗴 𝗖𝗹𝗲𝗮𝗻𝘀𝗶𝗻</h3>
+  <p class="product-price">$9.99</p>
+  <p class="product-caption" style="display: none;">𝗦𝗸𝗶𝗻𝟭𝟬𝟬𝟰 𝗠𝗮𝗱𝗮𝗴𝗮𝘀𝗰𝗮𝗿 𝗖𝗲𝗻𝘁𝗲𝗹𝗹𝗮
+𝗧𝗼𝗻𝗲 𝗕𝗿𝗶𝗴𝗵𝘁𝗲𝗻𝗶𝗻𝗴 𝗖𝗹𝗲𝗮𝗻𝘀𝗶𝗻𝗴 𝗚𝗲𝗹 𝗙𝗼𝗮𝗺 🤍✨
+ហ្វូមលាងមុខ បែបជែលថ្លា ស្រាល ស័ក្ដិសមសំរាប់ស្បែកមុខខ្សោយ ទូទៅ ស្ងួត ស្រអាប់
+• ជួយសម្អាតស្បែកបានស្អាត
+• កាត់បន្ថយស្បែករលាកក្រហម និងជួយអោយស្បែកភ្លឺ
+• ជួយរក្សាស្បែកអោយមានជាតិទឹក
+• លាងហើយស្បែកទន់ ស្រស់ថ្លា
+•ស្បែកមុខរោល ងាយប្រតិកម្ម សាកមួយនេះបានណា
+ចំណុះ 125ml</p>
+  <button class="buy-now">Buy Now</button>
+</div>
+<div class="product-card">
+  <img src="images/IMG_new27.jpeg" loading="lazy" alt="Skin1004 Tea-trica BHA Foam">
+  <h3 class="product-name">Skin1004 Tea-trica BHA Foam</h3>
+  <p class="product-price">$9.99</p>
+  <p class="product-caption" style="display: none;">Skin1004 Tea-trica BHA Foam 💚🍃
+— មាន Salicylic Acid 0.45% ជាសមត្ថភាពខ្ពស់ក្នុងការសម្អាតស្បែកមុខ សម្អាតជាតិប្រេងកខ្វក់ ខ្លាញ់ស្ទះ កាកសំណល់ និងកោសិកាងាប់ៗ បានយ៉ាងស្អាត
+— ពពុះហ្វូមស្រាលបន្ថយហើម រលាក ជាមួយនឹងរូបមន្តផ្សំឡើងពី Teatree Leaf Water (ស្លឹកតែ) និង Centella Asiatica Extract (ស្លឹកត្រចៀកក្រាញ់)
+— សម្អាតស្បែកបានជ្រៅ តែមិនឲ្យស្បែកស្ងួត ឬ តឹងស្បែក</p>
+  <button class="buy-now">Buy Now</button>
+</div>
+<div class="product-card">
+  <img src="images/IMG_new28.jpeg" loading="lazy" alt="SKIN1004 Poremizing Deep Cleansing foam">
+  <h3 class="product-name">SKIN1004 Poremizing Deep Cleansing foam</h3>
+  <p class="product-price">$9.99</p>
+  <p class="product-caption" style="display: none;">SKIN1004 Poremizing Deep Cleansing foam 🫧🩷
+
+•ប្រើសម្រាប់ស្បែកមុខប្រេង ជាពិសេសស្បែកមុខដែលមានរន្ធញើសធំៗ ស្បែកមុខគ្រើមមានមុនសាច់ មុនក្បាលខ្មៅ
+•លាងសម្អាតធូលី សារធាតុកខ្វក់ makeup ឬ sunscreen បានស្អាតល្អ និង ផ្តល់សំណើមដល់ស្បែក</p>
+  <button class="buy-now">Buy Now</button>
+</div>
+<div class="product-card">
+  <img src="images/IMG_new30.jpeg" loading="lazy" alt="SKIN 1004 TONER">
+  <h3 class="product-name">SKIN 1004 TONER</h3>
+  <p class="product-price">$10.50</p>
+  <p class="product-caption" style="display: none;">🩵SKIN 1004 TONER🩵
+Skin 1004 Hyalu-Cica Toner 🩵
+ជាប្រភេទថូន័រជូតមុខ ជួយផ្ដល់សំណើមដល់ស្បែក ល្អបំផុតសម្រាប់ស្បែកស្ងួត ស្បែកខ្សោយងាយប្រតិកម្ម ជួយបំពេញជាតិទឹកបានល្អ</p>
+  <button class="buy-now">Buy Now</button>
+</div>
+<div class="product-card">
+  <img src="images/IMG_new12.jpeg" loading="lazy" alt="Medicube PDRN pink Cica soothing toner">
+  <h3 class="product-name">Medicube PDRN pink Cica soothing toner</h3>
+  <p class="product-price">$13.00</p>
+  <p class="product-caption" style="display: none;">🌸Medicube PDRN pink Cica soothing toner ទឹកតប់មុខប្រើបានគ្រប់ប្រភេទស្បែក ជាពិសេស ស្បែកស្រអាប់ ស្ងួត ស្បែកមានស្នាម🌸
+    •មានសារធាតុផ្សំសំខាន់ peptide PDRN Cica ដែលជួយបានលើបញ្ហាច្រើនក្នុងពេលតែមួយ
+    •ផ្តល់សំណើម និងធ្វើអោយស្បែកភ្លឺរលោងភ្លាមៗ
+    •បណ្តឹងស្បែក បន្ថយស្នាមជួ្រញ បន្ថយរោលក្រហម
+    •ជួយបានលើបញ្ហាស្បែកស្រអាប់ខ្លាំង ជាំ ស្នាមខ្មៅដិត
+    •កាន់តែប្រើកាន់តែធ្វើអោយស្បែកមុខសរលោងក្នេងជាងវ័យ
+    •ប្រើបានព្រឹក /យប់ បន្ទាប់ពីលាងមុខរួច</p>
+  <button class="buy-now">Buy Now</button>
+</div>
+<div class="product-card">
   <img src="images/IMG_new1.jpeg" loading="lazy" alt="medicube - Red Succinic Acid Peeling Pad">
   <h3 class="product-name">medicube - Red Succinic Acid Peeling Pad</h3>
   <p class="product-price">$13.99</p>
