--- a/index.html
+++ b/index.html
@@ -420,7 +420,7 @@ _ ល្អបំផុតសម្រាប់ស្បែកដែលទើប
 </div>
 <div class="product-card">
   <img src="images/IMG_new30.jpeg" loading="lazy" alt="SKIN 1004 TONER">
-  <h3 class="product-name">SKIN 1004 TONER</h3>
+  <h3 class="product-name">SKIN 1004 TONER Hyalu-Cica Toner</h3>
   <p class="product-price">$10.50</p>
   <p class="product-caption" style="display: none;">🩵SKIN 1004 TONER🩵
 Skin 1004 Hyalu-Cica Toner 🩵
