--- a/index.html
+++ b/index.html
@@ -1042,18 +1042,13 @@ Tone-Up Sunscreen SPF50+ PA++++
   <button class="buy-now">Buy Now</button>
 </div>
 <div class="product-card">
-  <img src="images/IMG_2255.jpeg" loading="lazy" alt="Skin1004 Centella Light Cleansing Oil">
-  <h3 class="product-name">Skin1004 Centella Light Cleansing Oil</h3>
-  <p class="product-price">$9.99</p>
-  <p class="product-caption" style="display: none;">✨Skin1004 Centella Light Cleansing Oil✨
-•ជាប្រភេទប្រេងលាងសម្អាតMake Upនឹងធូលីដីបានល្អ
-•សក្តិសមសម្រាប់ស្បែកគ្រប់ប្រភេទ ជាពិសេសស្បែកដែលខ្សោយងាយរោល ងាយប្រតិកម្មក៏អាចប្រើបាន
-•ជួយសម្អាតបានយ៉ាងជ្រៅ
-•កំចាត់មុនខ្សាច់ មុនអង្កាម នឹងធ្វើឲ្យស្បែកមានសុខភាពល្អ✨
-SKIN1004 Ampoule foam 🫧
-✨អាចប្រើបានគ្រប់ប្រភេទស្បែក ជាពិសេសអ្នកដែលមានស្បែក sensitive ងាយប្រតិកម្ម
-✨ជួយកាត់បន្ថយការរមាស់ រោល ក្រហមស្បែក
-✨មិនធ្វើឲ្យមុខស្ងួត សាច់ហ្វូមទន់ត្រជាក់ ងាយស្រួលប្រើ</p>
+  <img src="images/IMG_2256.jpeg" loading="lazy" alt="Skin1004 Centella Light Cleansing Oil 200ml">
+  <h3 class="product-name">Skin1004 Centella Light Cleansing Oil 200ml</h3>
+  <p class="product-price">$12.99</p>
+  <p class="product-caption" style="display: none;">Skin1004 Centella Light Cleansing Oil 200ml
+ប្រេងលាងសម្អាតMake Upនឹងធូលីដីបានល្អ សម្រាប់ស្បែកគ្រប់ប្រភេទ ជាពិសេសស្បែកដែលខ្សោយងាយរោល ងាយប្រតិកម្មក៏អាចប្រើបាន ជួយសម្អាតបានយ៉ាងជ្រៅ កំចាត់មុនខ្សាច់ មុនអង្កាម នឹងធ្វើឲ្យស្បែកមានសុខភាពល្អ
+
+ជាប្រេងដែលអាចរំលាយគ្រឿងសម្អាង ដែលជាប់ខ្លាំង waterproof បានល្អ បានជ្រះស្អាត ឫ sunscreen physical ជាដើម លាបសម្អាតបរិវេនភ្នែកក៏មិនក្រហាយប៉ះពាល់ភ្នែក។</p>
   <button class="buy-now">Buy Now</button>
 </div>
 <div class="product-card">
