--- a/index.html
+++ b/index.html
@@ -627,7 +627,7 @@ Cica Houttuynia Tea Tree Calming mask
   <img src="images/IMG_1904.jpeg" loading="lazy" alt="Calendula Peptide Ageless Sleeping Mask">
   <h3 class="product-name">Calendula Peptide Ageless Sleeping Mask</h3>
   <p class="product-price">$12.99</p>
-  <p class="product-caption" style="display: none;">🌙 Mary & May Calendula Peptide Ageless Sleeping Mask 🌙
+  <p class="product-caption" style="display: none;">🌙 Mary&May Calendula Peptide Ageless Sleeping Mask 🌙
 ជាម៉ាសអប់មុខផ្សំចេញពីផ្កា Calendula
 និងពពួកPeptide 25 ប្រភេទ
 • ជួយបំបាត់បញ្ហារោលក្រហម ឡើងមុន ,ស្នាម
@@ -659,7 +659,7 @@ Cica Houttuynia Tea Tree Calming mask
 </div>
 <div class="product-card">
   <img src="images/IMG_1907.jpeg" loading="lazy" alt="Mary and May<br>Clay Mask">
-  <h3 class="product-name">Mary and May<br>Clay Mask</h3>
+  <h3 class="product-name">Mary&May<br>Clay Mask</h3>
   <p class="product-price">$12.99</p>
   <p class="product-caption" style="display: none;">Mary and May Clay Mask ~ ជាប្រភេទម៉ាសភក់✨
  🍋 Lemon : ជួយបំបាត់ស្នាមអុចខ្មៅលើស្បែក បំបាត់ស្នាម ធ្វើអោតស្បែកភ្លឺថ្លា រលោង បង្រួមរុន្ធញើស ធ្វើអោយស្បែកស
@@ -670,7 +670,7 @@ Cica Houttuynia Tea Tree Calming mask
   <img src="images/IMG_1908.jpeg" loading="lazy" alt="Blackberry Complex Glow Washoff Pack">
   <h3 class="product-name">Blackberry Complex Glow Washoff Pack</h3>
   <p class="product-price">$12.99</p>
-  <p class="product-caption" style="display: none;">Mary &May Blackberry Complex Glow Washoff Pack
+  <p class="product-caption" style="display: none;">Mary & May Blackberry Complex Glow Washoff Pack
 គឺជាប្រភេទ Clay Mask មកពីប្រទេសកូរ៉េ
 ✨ ជួយរាល់បញ្ហាស្បែកមុខ
 ✨ ពិសេសជួយទប់ស្កាត់ការឡើងមុន
@@ -794,7 +794,7 @@ _ ជួយសម្រួលភាពតានតឹងនៃស្បែក</p
 </div>
 <div class="product-card">
   <img src="images/IMG_2230.jpeg" loading="lazy" alt="Mary & May Idebenone + Blackberry Complex Serum">
-  <h3 class="product-name">Mary & May Idebenone + Blackberry Complex Serum</h3>
+  <h3 class="product-name">Mary&May Idebenone + Blackberry Complex Serum</h3>
   <p class="product-price">$8.99</p>
   <p class="product-caption" style="display: none;">🫐Mary & May Idebenone + Blackberry Complex Serum🫐
 •ជាប្រភេទសេរ៉ូមដែលមានប្រសិទ្ធភាពខ្ពស់លើការការពារកោសិកាស្បែក គ្មានក្លិនក្រអូប
