--- a/index.html
+++ b/index.html
@@ -668,7 +668,7 @@ Cica Houttuynia Tea Tree Calming mask
 </div>
 <div class="product-card">
   <img src="images/IMG_1908.jpeg" loading="lazy" alt="Blackberry Complex Glow Washoff Pack">
-  <h3 class="product-name">Blackberry Complex Glow Washoff Pack</h3>
+  <h3 class="product-name">Mary&May Blackberry Complex Glow Washoff Pack</h3>
   <p class="product-price">$12.99</p>
   <p class="product-caption" style="display: none;">Mary & May Blackberry Complex Glow Washoff Pack
 គឺជាប្រភេទ Clay Mask មកពីប្រទេសកូរ៉េ
@@ -781,7 +781,7 @@ _ ជួយសម្រួលភាពតានតឹងនៃស្បែក</p
 </div>
 <div class="product-card">
   <img src="images/IMG_2229.jpeg" loading="lazy" alt="Mary & May + Blackberry and Complex Intensive Cream">
-  <h3 class="product-name">Mary & May + Blackberry and Complex Intensive Cream</h3>
+  <h3 class="product-name">Mary&May + Blackberry and Complex Intensive Cream</h3>
   <p class="product-price">$11.99</p>
   <p class="product-caption" style="display: none;">Mary & May Idebenone + Blackberry and Complex Intensive Cream🫐
 
