--- a/index.html
+++ b/index.html
@@ -627,16 +627,14 @@ Cica Houttuynia Tea Tree Calming mask
   <img src="images/IMG_1904.jpeg" loading="lazy" alt="Calendula Peptide Ageless Sleeping Mask">
   <h3 class="product-name">Calendula Peptide Ageless Sleeping Mask</h3>
   <p class="product-price">$12.99</p>
-  <p class="product-caption" style="display: none;">🌙 Mary&May Calendula Peptide Ageless Sleeping Mask 🌙
-ជាម៉ាសអប់មុខផ្សំចេញពីផ្កា Calendula
-និងពពួកPeptide 25 ប្រភេទ
-• ជួយបំបាត់បញ្ហារោលក្រហម ឡើងមុន ,ស្នាម
-• ជួយបំពេញជាតិទឹកដល់ស្បែក ធ្វើឲ្យស្បែកទន់
-• ជួយកាត់បន្ថយទប់និង ពន្យារភាពចាស់ជ្រីវជ្រួញរបស់ស្បែក
-• សារធាតុប្រឆាំងអុកស៊ីតកម្ម ជួយឲ្យស្បែកមានសុខភាពល្អ
-• ជួយពង្រឹងរនាំងការពារស្បែក
+  <p class="product-caption" style="display: none;">Mary&may clay mask ✨
+   Vegan caledula peptide ageless sleeping mask✨
 
-📍របៀបប្រើ ១សប្តាហ៍ប្រើ២ទៅ៣ដង លាបលើមុខតែឯងហើយគេង ឬក៏លាបពីលើSkin Care Routine ពេលយប់ ។</p>
+•ជួយផ្ដល់សំណើមដល់ស្បែក 
+•ជួយកាត់បន្ថយការរោលក្រហម
+•ជួយពង្រឹងរនាំង ការពារស្បែក
+•ជួយអោយមុខភ្លឺថ្លា ក្មេងជាងវ័យ
+•សាក់សមសម្រាប់ស្បែកខ្សោយនឹង ឆាប់ប្រតិកម្ម</p>
   <button class="buy-now">Buy Now</button>
 </div>
 <div class="product-card">
@@ -1085,8 +1083,8 @@ Tone-Up Sunscreen SPF50+ PA++++
   <button class="buy-now">Buy Now</button>
 </div>
 <div class="product-card">
-  <img src="images/IMG_2262.jpeg" loading="lazy" alt="Anua Heartleaf Pore Control Cleansing Oil">
-  <h3 class="product-name">Anua Heartleaf Pore Control Cleansing Oil</h3>
+  <img src="images/IMG_2262.jpeg" loading="lazy" alt="Goodal Green Tangerine Vita-C Dark Spot Care Cream">
+  <h3 class="product-name">Goodal Green Tangerine Vita-C Dark Spot Care Cream </h3>
   <p class="product-price">$14.99</p>
   <p class="product-caption" style="display: none;">Goodal Green Tangerine Vita-C Dark Spot Care Cream សាកសមសំរាប់ស្បែកមុខខ្មៅស្រអាប់ មានស្នាម
 ✨ព្យាបាលអាចម៌រុយ
