--- a/index.html
+++ b/index.html
@@ -646,8 +646,8 @@ Cica Houttuynia Tea Tree Calming mask
   <button class="buy-now">Buy Now</button>
 </div>
 <div class="product-card">
-  <img src="images/IMG_1906.jpeg" loading="lazy" alt="Mary and May<br>Clay Mask">
-  <h3 class="product-name">Mary and May<br>Clay Mask</h3>
+  <img src="images/IMG_1906.jpeg" loading="lazy" alt="Mary&May<br>Clay Mask">
+  <h3 class="product-name">Mary&May<br>Clay Mask</h3>
   <p class="product-price">$12.99</p>
   <p class="product-caption" style="display: none;">✨Mary and May Clay Mask ~ ជាប្រភេទម៉ាសភក់✨
   Cica Tea Tree : សម្រាប់ស្បែកមុខ ងាយប្រតិកម្ម ឡើងរោល ក្រហម ឡើងមុន
