--- a/index.html
+++ b/index.html
@@ -566,7 +566,7 @@ After cleansing, take one cotton pad and gently wipe it over the entire face.</p
   <button class="buy-now">Buy Now</button>
 </div>
 <div class="product-card">
-  <img src="images/IMG_1900.jpeg" loading="lazy" alt="MARRY & MAY Premium Idebenone">
+  <img src="images/IMG_1900.jpeg" loading="lazy" alt="MARRY&MAY Premium Idebenone">
   <h3 class="product-name">MARRY&MAY Premium Idebenone</h3>
   <p class="product-price">$10.99</p>
   <p class="product-caption" style="display: none;">♡︎𝗠𝗔𝗥𝗬 & 𝗠𝗔𝗬 𝗠𝗔𝗦𝗞 𝗦𝗛𝗘𝗘𝗧♡︎
@@ -583,8 +583,18 @@ After cleansing, take one cotton pad and gently wipe it over the entire face.</p
   <button class="buy-now">Buy Now</button>
 </div>
 <div class="product-card">
+  <img src="images/IMG_new31.jpeg" loading="lazy" alt="Mary&May Houttuynia Cordata + Tea Tree Serum 30ml">
+  <h3 class="product-name">Mary&May Houttuynia Cordata + Tea Tree Serum 30ml</h3>
+  <p class="product-price">$8.99</p>
+  <p class="product-caption" style="display: none;">Mary&May Houttuynia Cordata + Tea Tree Serum 30ml: សេរ៉ូមដែលជួយបង្រួមរន្ធញើស និង ព្យាបាលស្បែកដែលមានបញ្ហា មានមុន ពិសេសស្បែកដែលងាយរងប្រតិកម្ម
+🍀ផ្សំឡើងពី 85% Houttuynia Cordata Extract និង 9.7% Tea Tree Extract ដើម្បីបង្រួមរន្ធញើស និង ព្យាបាលស្បែកដែលមានបញ្ហា មានមុន ប្រឆាំងនឹងបាក់តេរី និងប្រឆាំងនឹងការរលាក
+ជួយកម្ចាត់ខ្លាញ់ដែលលើស ធ្វើឱ្យស្បែកស្រស់ថ្លា
+ទប់ស្កាត់កុំអោយឡើងមុន និងបំបាត់ស្នាមមុន</p>
+  <button class="buy-now">Buy Now</button>
+</div>
+<div class="product-card">
   <img src="images/IMG_1901.jpeg" loading="lazy" alt="MARRY & MAY Cica Houttuynia Tea Tree">
-  <h3 class="product-name">MARRY & MAY Cica Houttuynia Tea Tree</h3>
+  <h3 class="product-name">MARRY&MAY Cica Houttuynia Tea Tree</h3>
   <p class="product-price">$10.99</p>
   <p class="product-caption" style="display: none;">♡︎𝗠𝗔𝗥𝗬 & 𝗠𝗔𝗬 𝗠𝗔𝗦𝗞 𝗦𝗛𝗘𝗘𝗧♡︎
 
